--- a/views/index.pug
+++ b/views/index.pug
@@ -2,4 +2,7 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  ul
+    each val in messages
+      li=`${val.added.toUTCString()} ${val.user}: ${val.text}`
+  button(onclick="location.href='/new'")="new message"
